# Pin_Hw09

./: run_ocr.sh  test_sh_ocr.py
OCR/: SETUP_NOTES.md  api_keys.json  ocr.py  ocr_app.py  requirements.txt  start_ocr.sh  test_env.py
pypi_upload/: LICENSE  README.md  pyproject.toml
pypi_upload/src/sh_ocr_client/: __init__.py  client.py
pypi_upload/tests/: test_client.py
