[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sh-ocr-client"
version = "0.1.0"
description = "A Python client library for OCR service"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "shuaronhong"}
]
keywords = ["ocr", "image-processing", "text-recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/shuaronhong/Pin_Hw09"
Repository = "https://github.com/shuaronhong/Pin_Hw09"
Issues = "https://github.com/shuaronhong/Pin_Hw09/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
